--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,44 +1,56 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Python 3",
+	"name": "Python Development Environment",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.12",
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
+	"features": {
+		"python": "latest"
+	},
 
 	// Configure tool-specific properties.
 	"customizations": {
 		// Configure properties specific to VS Code.
 		"vscode": {
-			"settings": {},
+			"settings": {
+				"python.formatting.provider": "black",
+				"editor.formatOnSave": true,
+				"python.linting.enabled": true,
+				"python.linting.pylintEnabled": true,
+				"python.linting.flake8Enabled": false,
+				"python.testing.pytestEnabled": true,
+				"python.testing.unittestEnabled": false,
+				"python.testing.nosetestsEnabled": false,
+				"editor.codeActionsOnSave": {
+					"source.organizeImports": true,
+					"source.fixAll": true
+				},
+				"editor.rulers": [88, 100],
+				"editor.minimap.enabled": true,
+				"python.analysis.typeCheckingMode": "basic",
+				"python.defaultInterpreterPath": "/usr/local/bin/python",
+				"python.analysis.autoImportCompletions": true
+			},
 			"extensions": [
-				"streetsidesoftware.code-spell-checker",
 				"ms-python.python",
 				"ms-python.vscode-pylance",
 				"ms-python.pylint",
 				"ms-python.black-formatter",
 				"GitHub.copilot",
 				"GitHub.copilot-chat",
-				"formulahendry.code-runner",
-				"VisualStudioExptTeam.vscodeintellicode",
-				"VisualStudioExptTeam.intellicode-api-usage-examples",
+				 "VisualStudioExptTeam.vscodeintellicode",
 				"ms-python.debugpy",
 				"ms-toolsai.jupyter",
-				"ms-toolsai.jupyter-keymap",
-				"ms-toolsai.jupyter-renderers",
-				"ms-toolsai.vscode-jupyter-cell-tags",
-				"ms-toolsai.vscode-jupyter-slideshow",
-				"ms-azuretools.vscode-docker",
-				"ms-vscode-remote.remote-containers",
-				"ms-vscode.live-server",
-				"ritwickdey.LiveServer",
 				"donjayamanne.python-environment-manager",
-				"donjayamanne.python-extension-pack",
-				"KevinRose.vsc-python-indent",
 				"njpwerner.autodocstring",
-				"chandrachood.python-docstring-generator"
+				"TabNine.tabnine-vscode",
+				"LittleFoxTeam.vscode-python-test-adapter",
+				"mhutchie.python-refactor",
+				"kevinrose.vsc-python-indent",
+				"ms-python.isort",
+				"sourcery.sourcery"
 			]
 		}
 	},
@@ -56,7 +68,7 @@
 	},
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install -r requirements.txt"
+	"postCreateCommand": "pip3 install -r requirements.txt && pip3 install black pylint pytest isort"
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
