--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,75 +1,82 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Python Development Environment",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.12",
-
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	"features": {
-		"python": "latest"
-	},
-
-	// Configure tool-specific properties.
-	"customizations": {
-		// Configure properties specific to VS Code.
-		"vscode": {
-			"settings": {
-				"python.formatting.provider": "black",
-				"editor.formatOnSave": true,
-				"python.linting.enabled": true,
-				"python.linting.pylintEnabled": true,
-				"python.linting.flake8Enabled": false,
-				"python.testing.pytestEnabled": true,
-				"python.testing.unittestEnabled": false,
-				"python.testing.nosetestsEnabled": false,
-				"editor.codeActionsOnSave": {
-					"source.organizeImports": true,
-					"source.fixAll": true
-				},
-				"editor.rulers": [88, 100],
-				"editor.minimap.enabled": true,
-				"python.analysis.typeCheckingMode": "basic",
-				"python.defaultInterpreterPath": "/usr/local/bin/python",
-				"python.analysis.autoImportCompletions": true
-			},
-			"extensions": [
-				"ms-python.python",
-				"ms-python.vscode-pylance",
-				"ms-python.pylint",
-				"ms-python.black-formatter",
-				"GitHub.copilot",
-				"GitHub.copilot-chat",
-				 "VisualStudioExptTeam.vscodeintellicode",
-				"ms-python.debugpy",
-				"ms-toolsai.jupyter",
-				"donjayamanne.python-environment-manager",
-				"njpwerner.autodocstring",
-				"TabNine.tabnine-vscode",
-				"LittleFoxTeam.vscode-python-test-adapter",
-				"mhutchie.python-refactor",
-				"kevinrose.vsc-python-indent",
-				"ms-python.isort",
-				"sourcery.sourcery"
-			]
-		}
-	},
-	
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [9000],
-
-	// Use 'portsAttributes' to set default properties for specific forwarded ports. 
-	// More info: https://containers.dev/implementors/json_reference/#port-attributes
-	"portsAttributes": {
-		"9000": {
-			"label": "Hello Remote World",
-			"onAutoForward": "notify"
-		}
-	},
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install -r requirements.txt && pip3 install black pylint pytest isort"
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+    "name": "Python Development Environment",
+    // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+    "image": "mcr.microsoft.com/devcontainers/python:1-3.12",
+    // Configure tool-specific properties.
+    "customizations": {
+        // Configure properties specific to VS Code.
+        "vscode": {
+            "settings": {
+                "python.formatting.provider": "black",
+                "editor.formatOnSave": true,
+                "python.linting.enabled": true,
+                "python.linting.pylintEnabled": true,
+                "python.linting.flake8Enabled": false,
+                "python.testing.pytestEnabled": true,
+                "python.testing.unittestEnabled": false,
+                "python.testing.nosetestsEnabled": false,
+                "editor.codeActionsOnSave": {
+                    "source.organizeImports": true,
+                    "source.fixAll": true
+                },
+                "python.analysis.typeCheckingMode": "basic",
+                "python.analysis.autoImportCompletions": true,
+                "github.copilot.enable": {
+                    "*": true,
+                    "yaml": true,
+                    "plaintext": true,
+                    "markdown": true
+                },
+                "github.copilot.inlineSuggest.enable": true
+            },
+            "extensions": [
+                "ms-python.python",
+                "ms-python.vscode-pylance",
+                "ms-python.pylint",
+                "ms-python.black-formatter",
+                "GitHub.copilot",
+                "GitHub.copilot-chat",
+                "VisualStudioExptTeam.vscodeintellicode",
+                "ms-python.debugpy",
+                "ms-toolsai.jupyter",
+                "donjayamanne.python-environment-manager",
+                "njpwerner.autodocstring",
+                "TabNine.tabnine-vscode",
+                "LittleFoxTeam.vscode-python-test-adapter",
+                "mhutchie.python-refactor",
+                "kevinrose.vsc-python-indent",
+                "aaron-bond.better-comments",
+                "formulahendry.code-runner",
+                "ryanluker.vscode-coverage-gutters",
+                "sourcery.sourcery",
+                "ms-toolsai.jupyter-keymap",
+                "ms-toolsai.jupyter-renderers",
+                "yzhang.markdown-all-in-one",
+                "bierner.markdown-preview-github-styles"
+            ],
+            "type": "command",
+            "commands": {
+                "command": "python.setInterpreter"
+            }
+        }
+    },
+    "features": {
+        "ghcr.io/devcontainers/features/python:1": {}
+    },
+    // Use 'forwardPorts' to make a list of ports inside the container available locally.
+    // "forwardPorts": [9000],
+    // Use 'portsAttributes' to set default properties for specific forwarded ports. 
+    // More info: https://containers.dev/implementors/json_reference/#port-attributes
+    "portsAttributes": {
+        "9000": {
+            "label": "Hello Remote World",
+            "onAutoForward": "notify"
+        }
+    },
+    // Use 'postCreateCommand' to run commands after the container is created.
+    "postCreateCommand": "pip install -r requirements.txt && pre-commit install",
+    // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+    "remoteUser": "vscode"
 }
