--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-flask
+Flask==2.0.1
+Flask-Cors==3.0.10
+PyGithub==1.55
+black==22.3.0
+pycodestyle==2.8.0
+rope==0.19.0
+isort==5.9.3
+autopep8==1.5.7
+docstring-parser==0.7.3
+Werkzeug==2.0.1
+Jinja2==3.0.1
+itsdangerous==2.0.1
+click==8.0.1
